feat: 通知换行优化&开启服务